--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>AppLab</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/al-logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/al-logo.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -264,7 +266,7 @@
                     <span><a href="">Annually</a></span>
                 </div>
                 <div class="tariff__list">
-                    <ul class="tariff__list_active">
+                    <ul class=" tariff__list-content">
                         <li class="tariff-name">
                             <p class="price">$0<span class="period">/month</span></p>
                             <h3>Business Class</h3>
@@ -278,7 +280,7 @@
                             <a class="button-free" href="">Start free trail</a>
                         </li>
                     </ul>
-                    <ul class="tariff__list-pro">
+                    <ul class="tariff__list-content">
                         <li class="tariff-name">
                             <p class="price">$99<span class="period">/month</span></p>
                             <h3>Pro Master</h3>
@@ -331,23 +333,46 @@
         <div class="container">
             <h2>Frequently asked questions</h2>
             <p>The rise of mobile devices transforms the way we consume information entirely<br> and the world's most elevant channels such as Facebook.</p>
-            <div class="faq__description">
-                <h3>How to contact with riders emergency?</h3>
-                <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative<br> approaches to corporate strategy foster collaborative thinking to further the overall value <br>proposition. Organically grow the holistic world
-                    view of disruptive innovation via workplace diversity and empowerment.</p>
-            </div>
             <div class="faq__list">
-                <div class="faq__list-item">
-                    App installation failed, how to update system information?
+                <div>
+
+                    <details class="faq__list-item" open>
+                        <summary> How to contact with riders emergency?</summary>
+                        <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative<br> approaches to corporate strategy foster collaborative thinking to further the overall value <br>proposition. Organically grow the holistic
+                            world view of disruptive innovation via workplace diversity and empowerment.</p>
+
+                    </details>
                 </div>
-                <div class="faq__list-item">
-                    Website reponse taking time, how to improve?
+                <div>
+
+                    <details class="faq__list-item">
+                        <summary> App installation failed, how to update system information?</summary>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi exercitationem quas dicta, itaque perferendis quidem fuga eos voluptate quis esse optio ex odio repudiandae! Voluptatibus nostrum voluptates maiores veniam amet.</p>
+
+                    </details>
                 </div>
-                <div class="faq__list-item">
-                    New update fixed all bug and issues
+                <div>
+
+                    <details class="faq__list-item">
+                        <summary> Website reponse taking time, how to improve?</summary>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi exercitationem quas dicta, itaque perferendis quidem fuga eos voluptate quis esse optio ex odio repudiandae! Voluptatibus nostrum voluptates maiores veniam amet.</p>
+
+                    </details>
                 </div>
-                <div class="faq__list-item">
-                    How to contact with riders emergency?
+                <div>
+
+                    <details class="faq__list-item">
+                        <summary> New update fixed all bug and issues</summary>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi exercitationem quas dicta, itaque perferendis quidem fuga eos voluptate quis esse optio ex odio repudiandae! Voluptatibus nostrum voluptates maiores veniam amet.</p>
+
+                    </details>
+                </div>
+                <div>
+                    <details class="faq__list-item">
+                        <summary> How to contact with riders emergency?</summary>
+                        <p class="faq__list-answer">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi exercitationem quas dicta, itaque perferendis quidem fuga eos voluptate quis esse optio ex odio repudiandae! Voluptatibus nostrum voluptates maiores veniam amet.</p>
+
+                    </details>
                 </div>
             </div>
         </div>
@@ -388,10 +413,10 @@
                 </div>
             </div>
             <div class="footer__social">
-                <a href=""><img class="footer__icon" src="img/footer_link1.svg" alt=""></a>
-                <a href=""><img class="footer__icon" src="img/footer_link2.svg" alt=""></a>
-                <a href=""><img class="footer__icon" src="img/hashtag.svg" alt=""></a>
-                <a href=""><img class="footer__icon" src="img/footer_link4.svg" alt=""></a>
+                <a href="" class="footer__icon icon-icon_facebook"></a>
+                <a href="" class="footer__icon icon-icon_twitter"></a>
+                <a href="" class="footer__icon icon-icon_github"></a>
+                <a href="" class="footer__icon icon-icon-hashtag"></a>
             </div>
             <div class="footer__copyright">
                 Copyright© Arifur Rahman Tushar 2019. All rights reserved
